--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photo Editor</title>
-    <link rel="stylesheet" href="assets/index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="assets/index.css" />
+  </head>
+  <body>
     <div id="upload">
-        <label for="uploader">Select file:</label>
-        <input type="file" name="" id="uploader">
+      <label for="uploader">Select file:</label>
+      <input type="file" name="" id="uploader" />
     </div>
     <div id="buttons">
-        <button>Greyscale</button>
-        <button>Sepia</button>
-        <button>Invert</button>
-        <button>RGB > RBG</button>
-        <button>RGB > BGR</button>
-        <button>RGB > GBR</button>
-        <button>RGB > GRB</button>
-        <button>Clear</button>
-
+      <button>Greyscale</button>
+      <button>Sepia</button>
+      <button>Invert</button>
+      <button>RGB > RBG</button>
+      <button>RGB > BGR</button>
+      <button>RGB > GBR</button>
+      <button>RGB > GRB</button>
+      <button>Clear</button>
     </div>
     <div>
-        <canvas id="canvas"></canvas>
+      <canvas id="canvas"></canvas>
     </div>
-    
+
     <script src="assets/script.js"></script>
-    
-</body>
+  </body>
 </html>
